Added changes from code review.