@@ -2,47 +2,50 @@ package com.revo.myboard.group;
 
 import com.revo.myboard.exception.GroupNameInUseException;
 import com.revo.myboard.exception.GroupNotExistsException;
+import com.revo.myboard.group.dto.CreateDTO;
 import com.revo.myboard.group.dto.GroupDTO;
-import com.revo.myboard.user.UserRepository;
+import com.revo.myboard.user.UserServiceApi;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-
-/*
- * Created By Revo
- */
 
 @Service
 @Transactional
 @AllArgsConstructor
-public class GroupService {
+class GroupService implements GroupServiceApi{
 
     private static final String DEFAULT_GROUP_NAME = "UŻYTKOWNIK";
 
     private final GroupRepository repository;
-    private final UserRepository userRepository;
+    private final UserServiceApi userService;
 
+    @Override
     public Group getDefaultGroup() {
-        if (repository.count() == 0 || repository.findByName(DEFAULT_GROUP_NAME).isEmpty()) {
+        if (!existsByName(DEFAULT_GROUP_NAME)) {
             repository.save(buildDefaultGroup());
         }
         return findDefaultGroup();
     }
 
     private Group findDefaultGroup(){
-        return repository.findByName(DEFAULT_GROUP_NAME).get();
+        return repository.findByName(DEFAULT_GROUP_NAME)
+                .orElseThrow(() -> new GroupNotExistsException(DEFAULT_GROUP_NAME));
     }
 
     private Group buildDefaultGroup(){
-        return Group.builder().name(DEFAULT_GROUP_NAME).authority(Authority.USER).build();
+        return Group.builder()
+                .name(DEFAULT_GROUP_NAME)
+                .authority(Authority.USER)
+                .build();
     }
 
+    @Override
     public Group getGroupById(long id) {
-        return repository.findById(id).orElseThrow(() -> new GroupNotExistsException(id));
+        return repository.findById(id)
+                .orElseThrow(() -> new GroupNotExistsException(id));
     }
 
     GroupDTO getGroupDTOById(long id) {
@@ -53,10 +56,12 @@ public class GroupService {
         return GroupMapper.mapFromGroup(group);
     }
 
-    GroupDTO createGroup(String name, String authority) {
+    GroupDTO createGroup(CreateDTO createDTO) {
+        var name = createDTO.getName();
         if (existsByName(name)) {
             throw new GroupNameInUseException(name);
         }
+        var authority = createDTO.getAuthority();
         var group = repository.save(buildGroup(name, authority));
         return mapFromGroup(group);
     }
@@ -66,7 +71,10 @@ public class GroupService {
     }
 
     private Group buildGroup(String name, String authority){
-        return Group.builder().name(name).authority(Authority.valueOf(authority)).build();
+        return Group.builder()
+                .name(name)
+                .authority(Authority.valueOf(authority))
+                .build();
     }
 
     void deleteGroupById(long id) {
@@ -75,7 +83,13 @@ public class GroupService {
     }
 
     private void fixUsersGroup(long id){
-        userRepository.findAll().stream().filter(user -> user.getGroup().getId() == id).forEach(user -> user.setGroup(getDefaultGroup()));
+        userService.getAll().stream()
+                .filter(user -> getIdOfGroup(user.getGroup()) == id)
+                .forEach(user -> user.setGroup(getDefaultGroup()));
+    }
+
+    private long getIdOfGroup(Group group) {
+        return group.getId();
     }
 
     GroupDTO renameGroupById(long id, String new_name) {
@@ -87,8 +101,19 @@ public class GroupService {
         return mapFromGroup(group);
     }
 
-    public List<GroupDTO> getAllGroups() {
-        return repository.findAll().stream().map(this::mapFromGroup).collect(Collectors.toList());
+    List<GroupDTO> getAllGroups() {
+        var groups = getAll();
+        return mapFromList(groups);
+    }
+
+    private List<GroupDTO> mapFromList(List<Group> all) {
+        return all.stream()
+                .map(this::mapFromGroup)
+                .toList();
+    }
+
+    private List<Group> getAll() {
+        return repository.findAll();
     }
 
     GroupDTO changeGroupAuthority(long id, String authority) {
@@ -98,6 +123,12 @@ public class GroupService {
     }
 
     List<String> getAuthorityList() {
-        return Arrays.stream(Authority.values()).map(Object::toString).collect(Collectors.toList());
+        return mapFromListAsString(Authority.values());
+    }
+
+    private List<String> mapFromListAsString(Authority[] values) {
+        return Arrays.stream(values)
+                .map(Object::toString)
+                .toList();
     }
 }
