@@ -1,16 +1,16 @@
 package com.revo.myboard.report;
 
 import com.revo.myboard.comment.Comment;
-import com.revo.myboard.comment.CommentService;
+import com.revo.myboard.comment.CommentServiceApi;
 import com.revo.myboard.exception.ReportNotExistsException;
 import com.revo.myboard.exception.SameAccessStatusException;
 import com.revo.myboard.exception.UserIsOwnerException;
 import com.revo.myboard.group.Authority;
 import com.revo.myboard.post.Post;
-import com.revo.myboard.post.PostService;
+import com.revo.myboard.post.PostServiceApi;
 import com.revo.myboard.report.dto.ReportDTO;
 import com.revo.myboard.user.User;
-import com.revo.myboard.user.UserService;
+import com.revo.myboard.user.UserServiceApi;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,34 +18,40 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
-
-/*
- * Created By Revo
- */
 
 @Service
 @Transactional
 @AllArgsConstructor
-public class ReportService {
+class ReportService {
 
-    private static final String WHO = "admin";
+    private static final String WHO = "Admin";
     private final ReportRepository repository;
-    private final UserService userService;
-    private final PostService postService;
-    private final CommentService commentService;
+    private final UserServiceApi userService;
+    private final PostServiceApi postService;
+    private final CommentServiceApi commentService;
 
     Report getReportById(String token, long id) {
         var report = getReport(id);
         var user = getUser(token);
-        if (user.getGroup().getAuthority().equals(Authority.USER) && !user.getReports().contains(report)) {
+        if (hasUserRole(user) && !isOwnerOfReport(user, report)) {
             throw new ReportNotExistsException(id);
         }
         return report;
     }
 
+    private boolean isOwnerOfReport(User user, Report report) {
+        var reports = user.getReports();
+        return reports.contains(report);
+    }
+
+    private boolean hasUserRole(User user) {
+        var group = user.getGroup();
+        return Objects.equals(group.getAuthority(), Authority.USER);
+    }
+
     private Report getReport(long id){
-        return repository.findById(id).orElseThrow(() -> new ReportNotExistsException(id));
+        return repository.findById(id)
+                .orElseThrow(() -> new ReportNotExistsException(id));
     }
 
     private User getUser(String token){
@@ -63,11 +69,15 @@ public class ReportService {
     ReportDTO createReportForPost(String token, long post_id, String content) {
         var user = getUser(token);
         var post = getPost(post_id);
-        if (Objects.equals(post.getAuthor(), user)) {
+        if (isOwnerOfPost(user, post)) {
             throw new UserIsOwnerException(user, post_id);
         }
         var report = repository.save(buildReport(user, post, content));
         return mapFromReport(report);
+    }
+
+    private boolean isOwnerOfPost(User user, Post post) {
+        return Objects.equals(post.getAuthor(), user);
     }
 
     private Report buildReport(User user, Post post, String content){
@@ -87,11 +97,15 @@ public class ReportService {
     ReportDTO createReportForComment(String token, long comment_id, String content) {
         var user = getUser(token);
         var comment = getComment(comment_id);
-        if (Objects.equals(comment.getAuthor(), user)) {
+        if (isOwnerOfComment(user, comment)) {
             throw new UserIsOwnerException(user, comment_id);
         }
         var report = repository.save(buildReport(user,comment,content));
         return mapFromReport(report);
+    }
+
+    private boolean isOwnerOfComment(User user, Comment comment) {
+        return Objects.equals(comment.getAuthor(), user);
     }
 
     private Report buildReport(User user, Comment comment, String content){
@@ -114,7 +128,7 @@ public class ReportService {
     }
 
     private List<ReportDTO> mapFromList(List<Report> reports){
-        return reports.stream().map(this::mapFromReport).collect(Collectors.toList());
+        return reports.stream().map(this::mapFromReport).toList();
     }
 
     private List<Report> findByCheckedFalse(){
@@ -133,5 +147,4 @@ public class ReportService {
     void deleteReportById(long id) {
         repository.delete(repository.getById(id));
     }
-
 }
